--- a/BuiDuyBinh_2011062484/BuiDuyBinh_2011062484.csproj
+++ b/BuiDuyBinh_2011062484/BuiDuyBinh_2011062484.csproj
@@ -50,12 +50,21 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.9.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.9\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Web.Http, Version=5.2.9.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.9\lib\net45\System.Web.Http.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Http.WebHost, Version=5.2.9.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.9\lib\net45\System.Web.Http.WebHost.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
@@ -168,38 +177,38 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AttendancesController.cs" />
     <Compile Include="Controllers\CoursesController.cs" />
+    <Compile Include="Controllers\FollowingsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="DTOs\AttendanceDto.cs" />
+    <Compile Include="DTOs\FollowingDto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202303150311558_khoi tao cac bang cua Identity.cs" />
-    <Compile Include="Migrations\202303150311558_khoi tao cac bang cua Identity.designer.cs">
-      <DependentUpon>202303150311558_khoi tao cac bang cua Identity.cs</DependentUpon>
+    <Compile Include="Migrations\202303220422171_SuaCSDL.cs" />
+    <Compile Include="Migrations\202303220422171_SuaCSDL.designer.cs">
+      <DependentUpon>202303220422171_SuaCSDL.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202303150323123_CreateTableCourse.cs" />
-    <Compile Include="Migrations\202303150323123_CreateTableCourse.designer.cs">
-      <DependentUpon>202303150323123_CreateTableCourse.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202303150328044_PopulateCategoryTable.cs" />
-    <Compile Include="Migrations\202303150328044_PopulateCategoryTable.designer.cs">
-      <DependentUpon>202303150328044_PopulateCategoryTable.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202303162302401_AddNameColumnToApplicationUser.cs" />
-    <Compile Include="Migrations\202303162302401_AddNameColumnToApplicationUser.designer.cs">
-      <DependentUpon>202303162302401_AddNameColumnToApplicationUser.cs</DependentUpon>
+    <Compile Include="Migrations\202303281845208_AddFollowingsTable.cs" />
+    <Compile Include="Migrations\202303281845208_AddFollowingsTable.designer.cs">
+      <DependentUpon>202303281845208_AddFollowingsTable.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\Attendance.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\Following.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\CoursesViewModel.cs" />
     <Compile Include="ViewModels\CourseViewModel.cs" />
     <Compile Include="ViewModels\FutureDate.cs" />
     <Compile Include="ViewModels\ValidTime.cs" />
@@ -261,9 +270,12 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Courses\Create.cshtml" />
+    <Content Include="Views\Courses\Attending.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Attendances\" />
+    <Folder Include="Views\Followings\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -279,17 +291,11 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202303150311558_khoi tao cac bang cua Identity.resx">
-      <DependentUpon>202303150311558_khoi tao cac bang cua Identity.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202303220422171_SuaCSDL.resx">
+      <DependentUpon>202303220422171_SuaCSDL.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202303150323123_CreateTableCourse.resx">
-      <DependentUpon>202303150323123_CreateTableCourse.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202303150328044_PopulateCategoryTable.resx">
-      <DependentUpon>202303150328044_PopulateCategoryTable.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202303162302401_AddNameColumnToApplicationUser.resx">
-      <DependentUpon>202303162302401_AddNameColumnToApplicationUser.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202303281845208_AddFollowingsTable.resx">
+      <DependentUpon>202303281845208_AddFollowingsTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
